ok it kinda works